--- a/docs/lib/sage_rails/app/views/sage_components/_sage_modal_content.html.erb
+++ b/docs/lib/sage_rails/app/views/sage_components/_sage_modal_content.html.erb
@@ -37,7 +37,7 @@
 
       <% if component.subheader %>
         <%= sage_component SageCardRow, { grid_template: "te" } do %>
-          <h2 class="t-sage-heading-6">
+          <h2 class="<%= "#{SageClassnames::TYPE::BODY} #{SageClassnames::TYPE_COLORS::CHARCOAL_300}" %>">
             <%= component.subheader %>
           </h2>
 
