fix(icons): add new icon to _icon.scss

--- a/packages/sage-assets/lib/stylesheets/tokens/_icon.scss
+++ b/packages/sage-assets/lib/stylesheets/tokens/_icon.scss
@@ -188,6 +188,7 @@ $sage-icons: (
   location: unicode(e987),
   lock: unicode(e988),
   lock-alt: unicode(e989),
+  logo-afterpay: unicode(ea03),
   logo-facebook: unicode(e9e5),
   logo-facebook-round: unicode(e9f9),
   logo-instagram: unicode(e9e6),
