--- a/packages/sage-assets/lib/stylesheets/components/_button.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_button.scss
@@ -240,7 +240,7 @@ $-btn-loading-min-height: rem(36px);
     font-weight: sage-font-weight(regular);
   }
 
-  .sage-expandable-card--align-arrow-right & {
+  .sage-expandable-card--align-arrow-right &.sage-expandable-card__trigger {
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -799,7 +799,7 @@ a.sage-btn {
     align-items: center;
   }
 
-  .sage-expandable-card--align-arrow-right & {
+  .sage-expandable-card--align-arrow-right .sage-expandable-card__trigger & {
     order: -1;
   }
 
