docs: update color palette syntax in docs

--- a/docs/app/views/pages/_color_values.html.erb
+++ b/docs/app/views/pages/_color_values.html.erb
@@ -24,7 +24,7 @@
           <%= sage_component SageCopyButton, {
             borderless: true,
             css_classes: "colors__copy-btn",
-            value: "SageTokens::COLOR_PALETTE::#{color.upcase}_100"
+            value: "SageTokens::COLOR_PALETTE[:#{color.upcase}_100]"
           } %>
         </div>
         <div>
@@ -62,7 +62,7 @@
           <%= sage_component SageCopyButton, {
             borderless: true,
             css_classes: "colors__copy-btn",
-            value: "SageTokens::COLOR_PALETTE::#{color.upcase}_200"
+            value: "SageTokens::COLOR_PALETTE[:#{color.upcase}_200]"
           } %>
         </div>
         <div>
@@ -100,7 +100,7 @@
           <%= sage_component SageCopyButton, {
             borderless: true,
             css_classes: "colors__copy-btn",
-            value: "SageTokens::COLOR_PALETTE::#{color.upcase}_300"
+            value: "SageTokens::COLOR_PALETTE[:#{color.upcase}_300]"
           } %>
         </div>
         <div>
@@ -138,7 +138,7 @@
           <%= sage_component SageCopyButton, {
             borderless: true,
             css_classes: "colors__copy-btn",
-            value: "SageTokens::COLOR_PALETTE::#{color.upcase}_400"
+            value: "SageTokens::COLOR_PALETTE[:#{color.upcase}_400]"
           } %>
         </div>
         <div>
@@ -176,7 +176,7 @@
           <%= sage_component SageCopyButton, {
             borderless: true,
             css_classes: "colors__copy-btn",
-            value: "SageTokens::COLOR_PALETTE::#{color.upcase}_500"
+            value: "SageTokens::COLOR_PALETTE[:#{color.upcase}_500]"
           } %>
         </div>
         <div>
