--- a/docs/app/views/pages/_color_values_base.html.erb
+++ b/docs/app/views/pages/_color_values_base.html.erb
@@ -24,7 +24,7 @@
           <%= sage_component SageCopyButton, {
             borderless: true,
             css_classes: "colors__copy-btn",
-            value: "SageTokens::COLOR_PALETTE::#{color.upcase}"
+            value: "SageTokens::COLOR_PALETTE[:#{color.upcase}]"
           } %>
         </div>
         <div>
