--- a/docs/app/views/pages/_color_values_neutral.html.erb
+++ b/docs/app/views/pages/_color_values_neutral.html.erb
@@ -25,7 +25,7 @@
             <%= sage_component SageCopyButton, {
               borderless: true,
               css_classes: "colors__copy-btn",
-              value: "SageTokens::COLOR_PALETTE::#{color.upcase}_#{i}00"
+              value: "SageTokens::COLOR_PALETTE[:#{color.upcase}_#{i}00]"
             } %>
           </div>
           <div>
