docs(select): rails - update the props descriptions

--- a/docs/app/views/examples/components/form_select/_props.html.erb
+++ b/docs/app/views/examples/components/form_select/_props.html.erb
@@ -1,18 +1,18 @@
 <tr>
   <td><%= md('`disabled`') %></td>
-  <td><%= md('Enabling this property adds the `disabled` attribute to the component. <br>⚠️ `disabled` inputs are not submitted in forms.') %></td>
+  <td><%= md('Enabling this property adds the `disabled` attribute to the component. `disabled` inputs are not submitted in forms.') %></td>
   <td><%= md('Boolean') %></td>
   <td><%= md('`false`') %></td>
 </tr>
 <tr>
   <td><%= md('`has_error`') %></td>
-  <td><%= md('Enabling this property adds the `.sage-form-field--error` class to the component.') %></td>
+  <td><%= md('Enabling this property styles the select in the default danger color theme.') %></td>
   <td><%= md('Boolean') %></td>
   <td><%= md('`false`') %></td>
 </tr>
 <tr>
   <td><%= md('`message`') %></td>
-  <td><%= md('Sets the message text for the component.') %></td>
+  <td><%= md('Displays the message text for the component.') %></td>
   <td><%= md('String') %></td>
   <td><%= md('`nil`') %></td>
 </tr>
