docs(icon): updated documentation

--- a/docs/app/views/examples/components/icon/_preview.html.erb
+++ b/docs/app/views/examples/components/icon/_preview.html.erb
@@ -15,7 +15,7 @@
 <%= sage_component SageDivider, {} %>
 
 <h3>Size</h3>
-<p>Size can be used to increase or decrease the size of the icon. The default size is <code>md</code>.</p>
+<p>Size can be used to increase or decrease the size of the icon. The default size is <code>md</code>. See Property tab for available values.</p>
 
 <%= sage_component SageIcon, { icon: "pen", label: "Edit", size: "sm" } %>
 <%= sage_component SageIcon, { icon: "pen", label: "Edit" } %>
@@ -25,14 +25,14 @@
 
 <h3>Card Color</h3>
 
-<p>Icons can be placed on a colored background by setting the <code>card_color</code> property. See property tab for available values.</p>
+<p>Icons can be placed on a colored background by setting the <code>card_color</code> property. See Property tab for available values.</p>
 
 <%= sage_component SageIcon, { icon: "danger", card_color: "danger" } %>
 
 <%= sage_component SageDivider, {} %>
 
 <h3>Background Sizes</h3>
-<p>Background sizes can be applied by setting the <code>background_size</code> property. See property tab for available values.</p>
+<p>Background sizes can be applied by setting the <code>background_size</code> property. See Property tab for available values.</p>
 
 <%= sage_component SageIcon, { icon: "pen", size: "sm", card_color: "draft" } %>
 <%= sage_component SageIcon, { icon: "pen", size: "lg", card_color: "draft" } %>
