docs(icon): review related adjustments

--- a/docs/app/views/examples/components/icon/_preview.html.erb
+++ b/docs/app/views/examples/components/icon/_preview.html.erb
@@ -2,7 +2,7 @@
 
 <%= sage_component SageIcon, { icon: "pen", label: "Edit" } %>
 
-<h2>Variants:</h2>
+<h2>Variants</h2>
 
 <h3>Color</h3>
 
@@ -32,7 +32,7 @@
 <%= sage_component SageDivider, {} %>
 
 <h3>Background Sizes</h3>
-<p>Background sizes can be applied by setting the <code>background_size</code> property. See Property tab for available values.</p>
+<p>Background sizes can be applied by setting the <code>size</code> property. See Property tab for available values.</p>
 
 <%= sage_component SageIcon, { icon: "pen", size: "sm", card_color: "draft" } %>
 <%= sage_component SageIcon, { icon: "pen", size: "lg", card_color: "draft" } %>
